<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/YellowLight"
    tools:context=".QR300.qr300updata">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tj01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqra01"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tj02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqrb03"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tj03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqrb05"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tj05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tj05"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tj06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tj06"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tj07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tj07"
            android:theme="@style/title" />
    </LinearLayout>


    <ListView
        android:id="@+id/jsonlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>