<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YellowLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/scanSttReturn"
                android:background="@drawable/button_type_nomal_midnight"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/updata"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/update"
                android:background="@drawable/button_type_nomal_midnight"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/upload"
                android:background="@drawable/button_type_nomal_midnight"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <SurfaceView
            android:id="@+id/suvqr300"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/tqrb02"
            android:theme="@style/title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tqra01"
            android:theme="@style/title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqra02"
            android:theme="@style/title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqra03"
            android:theme="@style/title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqra04"
            android:theme="@style/title" />
    </LinearLayout>

    <ListView
        android:id="@+id/qralist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="#A9EDBB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tqrb00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/tqrb02"
            android:theme="@style/title"/>

        <TextView
            android:id="@+id/tqrb01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqrb01"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tqrb02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqrb02_1"
            android:theme="@style/title" />

        <TextView
            android:id="@+id/tqrb05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tqrb05"
            android:theme="@style/title" />

    </LinearLayout>

    <ListView
        android:id="@+id/qrblist"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#A9EDBB"/>

</LinearLayout>