<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QR300.qr300"
    android:background="#41A5E9"
    >
    <SurfaceView
        android:id="@+id/suvqr300"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tqra01"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/tqra01"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/suvqr300"
        app:layout_constraintTop_toBottomOf="@id/suvqr300" />

    <TextView
        android:id="@+id/tqra02"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/tqra02"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/tqra01"
        app:layout_constraintLeft_toRightOf="@+id/tqra01" />
    <TextView
        android:id="@+id/tqra03"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/tqra03"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/tqra01"
        app:layout_constraintLeft_toRightOf="@+id/tqra02" />

    <TextView
        android:id="@+id/tqra04"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/tqra04"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/tqra01"
        app:layout_constraintLeft_toRightOf="@+id/tqra03" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/delete"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@id/suvqr300"
        app:layout_constraintLeft_toRightOf="@+id/suvqr300"
        android:text="@string/delete"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/upload"
        app:layout_constraintStart_toStartOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        android:text="@string/upload"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/updata"
        app:layout_constraintStart_toStartOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/upload"
        android:text="@string/update"/>
    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/tcount"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/updata"
        app:layout_constraintTop_toBottomOf="@+id/updata"
        android:text="@string/tcount"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/vcount"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tcount"
        app:layout_constraintBottom_toBottomOf="@+id/tcount"
        android:text=""
        android:textSize="12sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/updata"
        app:layout_constraintTop_toBottomOf="@+id/tcount"
        android:id="@+id/onlinecheck"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tonlinecheck"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/onlinecheck"
        app:layout_constraintBaseline_toBaselineOf="@id/onlinecheck"
        android:text="offline"
        android:textSize="12sp"/>
    <Button
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/tonlinecheck"
        app:layout_constraintTop_toBottomOf="@+id/tonlinecheck"
        android:id="@+id/btnonlineupdate"
        android:text="@string/btnonlinecheck"
        android:textSize="12sp"/>
    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#A9EDBB"
        android:id="@+id/scroll1"
        app:layout_constraintRight_toRightOf="@+id/tqra04"
        app:layout_constraintLeft_toLeftOf="@+id/tqra01"
        app:layout_constraintTop_toBottomOf="@+id/tqra01">

        <ListView
            android:id="@+id/qralist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </HorizontalScrollView>
    <TextView
        android:id="@+id/tqrb01"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tqrb01"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/scroll1"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tqrb02"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:text="@string/tqrb02_1"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/tqrb01"
        app:layout_constraintStart_toEndOf="@+id/tqrb01"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tqrb03"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/tqrb03"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/tqrb01"
        app:layout_constraintStart_toEndOf="@+id/tqrb02"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tqrb04"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tqrb04"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/tqrb01"
        app:layout_constraintStart_toEndOf="@+id/tqrb03"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tqrb05"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/tqrb05"
        app:layout_constraintBaseline_toBaselineOf="@+id/tqrb01"
        app:layout_constraintStart_toEndOf="@+id/tqrb04" />
    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tqrb05"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tqrb01"
        app:layout_constraintTop_toBottomOf="@+id/tqrb01"
        app:layout_constraintVertical_bias="0.0"
        android:background="#A9EDBB">

        <ListView
            android:id="@+id/qrblist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>